--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <script type="module" crossorigin src="./assets/index.87c452f3.js"></script>
-    <link rel="stylesheet" href="./assets/index.b4edb055.css">
+    <script type="module" crossorigin src="/portfolio-list/assets/index.be259c15.js"></script>
+    <link rel="stylesheet" href="/portfolio-list/assets/index.7488d05c.css">
   </head>
   <body>
     <div id="root"></div>
