--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="./images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Anthony-th Portfolio">
     <title>Portfolio</title>
-    <script type="module" crossorigin src="/portfolio-list/assets/index.d77be7b8.js"></script>
+    <script type="module" crossorigin src="/portfolio-list/assets/index.2eb6e4ac.js"></script>
     <link rel="stylesheet" href="/portfolio-list/assets/index.2c61d69c.css">
   </head>
   <body>
